--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             var animal =$(this).attr('data-animal');
             console.log("animal = "+animal);
 
-            var queryURL = 'http://api.giphy.com/v1/gifs/search?q=' + animal + '&api_key=ERdfHjSaiRIAd1Y10eqKvD5P25lEo3Pe&limit=10';
+            var queryURL = 'https://api.giphy.com/v1/gifs/search?q=' + animal + '&api_key=ERdfHjSaiRIAd1Y10eqKvD5P25lEo3Pe&limit=10';
 
             console.log(queryURL);
         
